--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,14 @@
     "require": {
         "php": "^8.1",
         "beyondcode/laravel-websockets": "^1.14",
+        "botman/botman": "^2.8",
+        "botman/driver-web": "*",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.8",
+        "pear/http_request2": "^2.6",
         "pusher/pusher-php-server": "^7.2",
         "tymon/jwt-auth": "^2.1"
     },
